--- a/friends/index.html
+++ b/friends/index.html
@@ -87,7 +87,7 @@
                         src='https://blog.4t.pw/media/images/music.png' alt="音乐播放器" class="musicbtn"></i></a>
         </div>
         <div class="avatar-border">
-            <img src="https://blog.4t.pw/images/avatar.png?v=1666095640168" class="avatar">
+            <img src="https://blog.4t.pw/images/avatar.png?v=1666096175872" class="avatar">
         </div>
         <div class="sitename">Gridea</div>
         <span class="description" data-text='["温故而知新"]'>&nbsp;</span>
@@ -1082,7 +1082,7 @@ menulist.eq(i).show();
     </div>
     <div id="bgchoice" style="display: none">link</div>
     
-    <div id="bgurl" style="display:none">https://ericamblog.oss-cn-shanghai.aliyuncs.com/2021/a40e019c880511ebb6edd017c2d2eca2%20(1)1.jpg</div>
+    <div id="bgurl" style="display:none">https://i.postimg.cc/sDmjsvw8/8b3f500435f04a6d8a121826f580b5aa.jpg</div>
     
     </div>
     <div id="landlord">
