--- a/music/index.html
+++ b/music/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <div id="lights_share" class="lights_footer">
-                <a href="javascript: void(0)" onclick="window.open('https://blog.pw.4t', 'Lights — Credits', 'width=500, height=600, menubar=0, resizable=0, location=0, toolbar=0, status=0, scrollbars=0, titlebar=0'); return false;">
+                <a href="javascript: void(0)" onclick="window.open('https://blog.4t.pw', 'Lights — Credits', 'width=500, height=600, menubar=0, resizable=0, location=0, toolbar=0, status=0, scrollbars=0, titlebar=0'); return false;">
                     博客</a> &middot; 了解
             </div>
             <div id="lights_credits" class="lights_footer">
