--- a/tuchuang/options.html
+++ b/tuchuang/options.html
@@ -81,7 +81,7 @@
                         <option value="1">开启</option>
                         <option value="0">关闭</option>
                     </select> 
-                    开启本地存储会将上传的图片保存在本地浏览器中！<a href='/show.html' style="color:red">【点击这里查看】</a>！
+                    开启本地存储会将上传的图片保存在本地浏览器中！<a href='/tuchuang/show.html' style="color:red">【点击这里查看】</a>！
                         
                 </fieldset>
 
