--- a/tuchuang/popup.html
+++ b/tuchuang/popup.html
@@ -82,8 +82,8 @@
             <h3>上传必读</h3>
             <p>1> 禁止上传色情/反动/暴力等违法违规图片！造成的一切恶果由图片上传者承担！本扩展仅限测试使用！</p>
             <p>2> 所有图床都支持PNG/JPG，每个图床支持更多格式以及大小</p>
-            <p>3> 目前本图床使用的是阿里/京东/腾讯/小米/百度/58同城/新浪等大厂的全球CDN加速，可<a href='/options.html' style="color:red">【点击这里】</a>切换。</p>
-            <p>4> 如需查看历史上传图片<a href='/show.html' style="color:red">【点击这里】</a>查看。</p>
+            <p>3> 目前本图床使用的是阿里/京东/腾讯/小米/百度/58同城/新浪等大厂的全球CDN加速，可<a href='/tuchuang/options.html' style="color:red">【点击这里】</a>切换。</p>
+            <p>4> 如需查看历史上传图片<a href='/tuchuang/show.html' style="color:red">【点击这里】</a>查看。</p>
             <p>5> 提醒：扩展已经支持COOKIE接口，名称备注(需登陆)。</p>
             <p>6> 说明：扩展不会上传用户的COOKIE，可以查看扩展需要的权限仅限指定的域名。</p>
             <p>7> 目前本源码直接调用大厂的上传接口，无中转，不收集/记录你的上传图片。</b></p>
