--- a/tuchuang/popup.html
+++ b/tuchuang/popup.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>即刻图床 - 大厂全球CDN加速,支持外链,不限流量,支持粘贴上传、拖放上传 jiketuchuang.com。</title>
     <link rel="shortcut icon" href="img/128.png" type="image/x-icon">
-    <meta name="description" content="即刻图床，JIKE免费图床，即刻免费图床，阿里巴巴全球CDN加速，京东全球CDN加速，支持外链图片，支持HTTPS，支持图片缩放，不限流量，支持粘贴上传、拖放上传，Markdown链接的图床" />
-    <meta name="keywords" content="JIKE免费图床 即刻图床 全球CDN加速 阿里云CDN 阿里巴巴CDN 京东CDN 百度CDN 小米CDN 头条CDN 免费图床 图床网站 免费外链 HTTPS外链图床 不限流量 永久图床 不限空间 图片空间 jiketuchuang.com" />
+    <meta name="description" content="即刻图床，JIKE免费图床，即刻免费图床，阿里巴巴全球CDN加速，京东全球CDN加速，支持外链图片，支持httpsS，支持图片缩放，不限流量，支持粘贴上传、拖放上传，Markdown链接的图床" />
+    <meta name="keywords" content="JIKE免费图床 即刻图床 全球CDN加速 阿里云CDN 阿里巴巴CDN 京东CDN 百度CDN 小米CDN 头条CDN 免费图床 图床网站 免费外链 httpsS外链图床 不限流量 永久图床 不限空间 图片空间 jiketuchuang.com" />
     <meta name="author" content="TUA<tua@live.cn>, malaohu, RUYO.net" />
-    <link href="http://lib.baomitu.com/pure/0.6.2/pure-min.css" rel="stylesheet" />
-    <link href="http://lib.baomitu.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://lib.baomitu.com/pure/0.6.2/pure-min.css" rel="stylesheet" />
+    <link href="https://lib.baomitu.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css.css" rel="stylesheet">
-    <link href="http://lib.baomitu.com/dropzone/5.4.0/min/basic.min.css" rel="stylesheet">
-    <link href="http://lib.baomitu.com/dropzone/5.4.0/min/dropzone.min.css" rel="stylesheet">
+    <link href="https://lib.baomitu.com/dropzone/5.4.0/min/basic.min.css" rel="stylesheet">
+    <link href="https://lib.baomitu.com/dropzone/5.4.0/min/dropzone.min.css" rel="stylesheet">
 
     <style type="text/css">
         .dropzone {
@@ -31,7 +31,7 @@
     <div id="main">
         <div class="header">
             <h1>即刻图床</h1>
-            <h2>支持阿里/京东/百度/腾讯/58同城/美团等全球CDN加速，支持HTTPS！绝对比其他图床强！</h2>
+            <h2>支持阿里/京东/百度/腾讯/58同城/美团等全球CDN加速，支持httpsS！绝对比其他图床强！</h2>
         </div>
         <div class="content">
             <div class="pure-g">
