--- a/rj.html
+++ b/rj.html
@@ -575,7 +575,7 @@
                     <h3 class="announcement-title">网站公告</h3>
                     <div class="announcement-content" id="announcementContent">
                         <div class="announcement-item">
-                            <div>欢迎使用软件管家，这里提供各种优质软件下载！</div>
+                            <div><a href="https://plasx.lanzout.com/b0pml0xvi?pwd=hch8" target="_blank" style="color: #2196F3; text-decoration: none;">下载解压软件和下载工具</a></div>
                             <div class="announcement-date">2024-11-01</div>
                         </div>
                         <div class="announcement-item">
